--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Test</title>
+<title>Your FACE is a tab</title>
 <script type="text/javascript">
   var imageURLs = [
        "faces/face1.jpeg"
