Remove inferior faces

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <title>Your FACE is a tab</title>
 <script type="text/javascript">
   var imageURLs = [
-       "faces/face1.jpeg"
-     , "faces/face2.jpg"
-     , "faces/face3.jpg"
+       "faces/face2.jpg"
   ];
   function getRandomImage() {
     var randomIndex = Math.floor(Math.random() * imageURLs.length);
